update features name

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -33,7 +33,7 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              First feature
+            Certify data origin
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
               Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
@@ -61,7 +61,7 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Second feature
+            Reveal document fraud
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
               Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
@@ -89,7 +89,7 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Third feature
+            Permissionless
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
               Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
@@ -121,7 +121,7 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              More features
+            ZK KYC
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
               Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
