improved text and spacing

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -36,15 +36,15 @@ import Container from "./Container.astro"
             Certify data origin
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+            Attach download certificates to your data.
             </p>
           </div>
-          <a href="#" class="flex items-center justify-between group-hover:text-secondary">
+          <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
             <span class="text-sm">Read more</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 -translate-x-4 text-2xl opacity-0 transition duration-300 group-hover:translate-x-0 group-hover:opacity-100">
               <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
@@ -64,15 +64,15 @@ import Container from "./Container.astro"
             Reveal document fraud
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+            Check whether uploaded documents match original ones.
             </p>
           </div>
-          <a href="#" class="flex items-center justify-between group-hover:text-secondary">
+          <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
             <span class="text-sm">Read more</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 -translate-x-4 text-2xl opacity-0 transition duration-300 group-hover:translate-x-0 group-hover:opacity-100">
               <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
@@ -92,15 +92,15 @@ import Container from "./Container.astro"
             Permissionless
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+            Certify data provenance without asking permission to the server.
             </p>
           </div>
-          <a href="#" class="flex items-center justify-between group-hover:text-secondary">
+          <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
             <span class="text-sm">Read more</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 -translate-x-4 text-2xl opacity-0 transition duration-300 group-hover:translate-x-0 group-hover:opacity-100">
               <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
       <div
@@ -124,15 +124,15 @@ import Container from "./Container.astro"
             ZK KYC
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+            Check thata customers pass your KYC without asking their data.
             </p>
           </div>
-          <a href="#" class="flex items-center justify-between group-hover:text-secondary">
+          <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
             <span class="text-sm">Read more</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5 -translate-x-4 text-2xl opacity-0 transition duration-300 group-hover:translate-x-0 group-hover:opacity-100">
               <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
