--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -12,7 +12,7 @@ import Container from "./Container.astro"
         <div class="relative pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
                 <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Certify Internet data with <span class="text-primary dark:text-white">Tisura</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">Download data somewhere, prove elsewhere that the data hasn't been tampered since download.</p>
+                <p class="mt-8 text-gray-700 dark:text-gray-300">Download data somewhere, prove elsewhere that the data is original.</p>
             </div>
         </div>
     </Container>
