--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import Layout from '../layouts/Layout.astro';
 // import Blog from '../components/Blog.astro';
 ---
 
-<Layout title="Welcome to Astrolus.">
-	<main class="space-y-40 mb-40">
+<Layout title="Welcome to Tisura.">
+	<main class="space-y-40 mb-20">
 		<HeroSection/>
 		<Features/>
 		<!-- <Stats/> -->
