Fix hamburger menu and typo

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -124,7 +124,7 @@ import Container from "./Container.astro"
             ZK KYC
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-            Check thata customers pass your KYC without asking their data.
+            Check that customers pass your KYC without asking their data.
             </p>
           </div>
           <!-- <a href="#" class="flex items-center justify-between group-hover:text-secondary">
