added logo and changed features images

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,18 +1,22 @@
 ---
 import Container from "./Container.astro"
-
 ---
 
 <div class="relative" id="home">
-    <div aria-hidden="true" class="absolute inset-0 grid grid-cols-2 -space-x-52 opacity-40 dark:opacity-20">
-        <div class="blur-[106px] h-56 bg-gradient-to-br from-primary to-purple-400 dark:from-blue-700"></div>
-        <div class="blur-[106px] h-32 bg-gradient-to-r from-cyan-400 to-sky-300 dark:to-indigo-600"></div>
+    <!-- Single Beige Gradient Background -->
+    <div aria-hidden="true" class="absolute inset-0">
+        <div class="blur-[106px] bg-gradient-to-r from-[#F5F5DC] to-[#DEB887] dark:from-[#D2B48C] dark:to-[#C1A57B] h-full w-full"></div>
     </div>
+
     <Container>
-        <div class="relative pt-36 ml-auto">
+        <div class="relative z-10 pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
-                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Certify Internet data with <span class="text-primary dark:text-white">Tisura</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">Download data somewhere, prove elsewhere that the data is original.</p>
+                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">
+                    Certify Internet data with <span class="text-primary dark:text-white">Tisura</span>
+                </h1>
+                <p class="mt-8 text-gray-700 dark:text-gray-300">
+                    Download data somewhere, prove elsewhere that the data is original.
+                </p>
             </div>
         </div>
     </Container>
