--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -48,10 +48,7 @@ const links = [
                 <!-- Logo Container -->
                 <div class="relative z-20 flex justify-between items-center w-auto">
                     <a href="/#home" aria-label="logo" class="flex items-center space-x-2">
-                        <div aria-hidden="true" class="flex space-x-1">
-                            <div class="h-4 w-4 rounded-full bg-gray-900 dark:bg-white"></div>
-                            <div class="h-6 w-2 bg-primary"></div>
-                        </div>
+                        <img src="/logo.svg" alt="Tisura Logo" class="h-10 w-10" aria-hidden="true">
                         <span class="text-2xl font-bold text-gray-900 dark:text-white">Tisura</span>
                     </a>
                 </div>
