--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -22,11 +22,11 @@ import Container from "./Container.astro"
       <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/4341/4341139.png"
+            src="/images/certified.png"
             class="w-12"
             width="512"
             height="512"
-            alt="burger illustration"
+            alt="certified stamp"
           />
 
           <div class="space-y-2">
@@ -50,11 +50,11 @@ import Container from "./Container.astro"
       <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/4341/4341134.png"
+            src="/images/flute.png"
             class="w-12"
             width="512"
             height="512"
-            alt="burger illustration"
+            alt="flute"
           />
 
           <div class="space-y-2">
@@ -78,11 +78,11 @@ import Container from "./Container.astro"
       <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
           <img
-            src="https://cdn-icons-png.flaticon.com/512/4341/4341160.png"
+            src="/images/globe.png"
             class="w-12"
             width="512"
             height="512"
-            alt="burger illustration"
+            alt="globe"
           />
 
           <div class="space-y-2">
@@ -110,11 +110,11 @@ import Container from "./Container.astro"
           class="relative space-y-8 py-12 p-8 transition duration-300 group-hover:bg-white dark:group-hover:bg-gray-800"
         >
           <img
-            src="https://cdn-icons-png.flaticon.com/512/4341/4341025.png"
+            src="/images/alarm.png"
             class="w-12"
             width="512"
             height="512"
-            alt="burger illustration"
+            alt="alarm"
           />
 
           <div class="space-y-2">
