--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -50,11 +50,11 @@ import Container from "./Container.astro"
       <div class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
           <img
-            src="/images/flute.png"
+            src="/images/magnifier.png"
             class="w-12"
             width="512"
             height="512"
-            alt="flute"
+            alt="magnifier glass"
           />
 
           <div class="space-y-2">
@@ -104,17 +104,17 @@ import Container from "./Container.astro"
         </div>
       </div>
       <div
-        class="group relative bg-gray-50 dark:bg-gray-900 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10"
+        class="group relative bg-white dark:bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10"
       >
         <div
           class="relative space-y-8 py-12 p-8 transition duration-300 group-hover:bg-white dark:group-hover:bg-gray-800"
         >
           <img
-            src="/images/alarm.png"
+            src="/images/mask.png"
             class="w-12"
             width="512"
             height="512"
-            alt="alarm"
+            alt="mask"
           />
 
           <div class="space-y-2">
