--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import AppHeader from "../components/AppHeader.astro";
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
-        <meta name="description" content="Tisura: certify Internet data" />
+        <meta name="description" content="Tisura - Certify Internet data" />
         <title>Tisura</title>
         <AstroFont
             config={[
