--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -14,6 +14,8 @@ import Container from "./Container.astro";
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="currentColor"
+                width="20"
+                height="20"
                 class="w-6 h-6"
                 viewBox="0 0 16 16"
               >
@@ -27,7 +29,7 @@ import Container from "./Container.astro";
               href="https://x.com/tisura_labs"
               class="flex items-center space-x-3 transition hover:text-primary text-gray-600 dark:text-gray-300"
             >
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
                 <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
                 </svg>
             </a>
@@ -38,6 +40,8 @@ import Container from "./Container.astro";
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
                 fill="currentColor"
                 class="w-6 h-6"
                 viewBox="0 0 16 16"
@@ -46,6 +50,24 @@ import Container from "./Container.astro";
                   d="M9.025 8c0 2.485-2.02 4.5-4.513 4.5A4.506 4.506 0 0 1 0 8c0-2.486 2.02-4.5 4.512-4.5A4.506 4.506 0 0 1 9.025 8zm4.95 0c0 2.34-1.01 4.236-2.256 4.236-1.246 0-2.256-1.897-2.256-4.236 0-2.34 1.01-4.236 2.256-4.236 1.246 0 2.256 1.897 2.256 4.236zM16 8c0 2.096-.355 3.795-.794 3.795-.438 0-.793-1.7-.793-3.795 0-2.096.355-3.795.794-3.795.438 0 .793 1.699.793 3.795z"
                 />
               </svg>
+            </a>
+
+            <a
+              href="https://www.linkedin.com/company/tisura-labs/"
+              class="flex items-center space-x-3 transition hover:text-primary text-gray-600 dark:text-gray-300"
+            >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="20"
+                  fill="currentColor"
+                  class="bi bi-linkedin"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"
+                  />
+                </svg>
             </a>
           </div>
         </div>
