updated background color

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -110,11 +110,11 @@ import Container from "./Container.astro"
           class="relative space-y-8 py-12 p-8 transition duration-300 group-hover:bg-white dark:group-hover:bg-gray-800"
         >
           <img
-            src="/images/mask.png"
+            src="/images/incognito.png"
             class="w-12"
             width="512"
             height="512"
-            alt="mask"
+            alt="incognito"
           />
 
           <div class="space-y-2">
