--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -3,19 +3,18 @@ import Container from "./Container.astro"
 ---
 
 <div class="relative" id="home">
-    <!-- Single Beige Gradient Background -->
     <div aria-hidden="true" class="absolute inset-0">
-        <div class="blur-[106px] bg-gradient-to-r from-[#F5F5DC] to-[#DEB887] dark:from-[#D2B48C] dark:to-[#C1A57B] h-full w-full"></div>
+        <div class="blur-[106px] bg-gradient-to-r from-blue-100 via-blue-200 to-blue-300 dark:from-blue-900 dark:via-blue-800 dark:to-blue-700 h-full w-full"></div>
     </div>
 
     <Container>
         <div class="relative z-10 pt-36 ml-auto">
             <div class="lg:w-2/3 text-center mx-auto">
                 <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">
-                    Certify Internet data with <span class="text-primary dark:text-white">Tisura</span>
+                  Certify Internet data with <span class="text-primary dark:text-primary">Tisura</span>
                 </h1>
                 <p class="mt-8 text-gray-700 dark:text-gray-300">
-                    Download data somewhere, prove elsewhere that the data is original.
+                  Download data somewhere, prove elsewhere that the data is original.
                 </p>
             </div>
         </div>
