added real world use cases

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -14,7 +14,7 @@ import Container from "./Container.astro"
                   Certify Internet data with <span class="text-primary dark:text-primary">Tisura</span>
                 </h1>
                 <p class="mt-8 text-gray-700 dark:text-gray-300">
-                  Tisura lets users prove the origin of any online data by - privately - generating a certificate of authenticity.
+                  Tisura lets users prove the origin of any online data by privately generating a certificate of authenticity.
                 </p>
             </div>
         </div>
