added links, features, use-cases and cta

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Features from '../components/Features.astro';
 import HeroSection from '../components/HeroSection.astro';
 import Layout from '../layouts/Layout.astro';
 import Testimonials from '../components/Testimonials.astro';
-// import CallToAction from '../components/CallToAction.astro';
+import CallToAction from '../components/CallToAction.astro';
 // import Blog from '../components/Blog.astro';
 ---
 
@@ -14,7 +14,7 @@ import Testimonials from '../components/Testimonials.astro';
 		<Features/>
 		<!-- <Stats/> -->
 		<Testimonials/>
-		<!-- <CallToAction/> -->
+		<CallToAction/>
 		<!-- <Blog/> -->
 	</main>
 </Layout>
