--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 import Features from '../components/Features.astro';
 import HeroSection from '../components/HeroSection.astro';
 import Layout from '../layouts/Layout.astro';
-import Testimonials from '../components/Testimonials.astro';
+import UseCases from '../components/UseCases.astro';
 import CallToAction from '../components/CallToAction.astro';
 // import Blog from '../components/Blog.astro';
 ---
@@ -13,7 +13,7 @@ import CallToAction from '../components/CallToAction.astro';
 		<HeroSection/>
 		<Features/>
 		<!-- <Stats/> -->
-		<Testimonials/>
+		<UseCases/>
 		<CallToAction/>
 		<!-- <Blog/> -->
 	</main>
