--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,8 @@
 import Features from '../components/Features.astro';
 import HeroSection from '../components/HeroSection.astro';
 import Layout from '../layouts/Layout.astro';
-// import Testimonials from '../components/Testimonials.astro';
-// import CallToAction from '../components/CallToAction.astro';
+import UseCases from '../components/UseCases.astro';
+import CallToAction from '../components/CallToAction.astro';
 // import Blog from '../components/Blog.astro';
 ---
 
@@ -13,8 +13,8 @@ import Layout from '../layouts/Layout.astro';
 		<HeroSection/>
 		<Features/>
 		<!-- <Stats/> -->
-		<!-- <Testimonials/> -->
-		<!-- <CallToAction/> -->
+		<UseCases/>
+		<CallToAction/>
 		<!-- <Blog/> -->
 	</main>
 </Layout>
