replace use-cases with solutions

--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -56,9 +56,9 @@ const links = [
 
                 <!-- Navigation Links -->
                 <div class="flex items-center space-x-8">
-                    <a href="https://tisura-docs.vercel.app/" class="text-primary dark:text-light-muted hover:text-white text-sm md:text-base font-medium">Documentation</a>
+                    <a href="/#solutions" class="text-primary dark:text-light-muted hover:text-white text-sm md:text-base font-medium">Solutions</a>
                     <a href="/#features" class="text-primary dark:text-light-muted hover:text-white text-sm md:text-base font-medium">Features</a>
-                    <a href="/#use-cases" class="text-primary dark:text-light-muted hover:text-white text-sm md:text-base font-medium">Use Cases</a>
+                    <a href="https://tisura-docs.vercel.app/" class="text-primary dark:text-light-muted hover:text-white text-sm md:text-base font-medium">Documentation</a>
                     <a href="https://tally.so/r/wM7kGp" class="text-primary dark:text-light-muted hover:text-white text-sm md:text-base font-medium">Contact</a>
                 </div>
 
