--- a/src/components/Solutions.astro
+++ b/src/components/Solutions.astro
@@ -13,7 +13,7 @@ import Container from "./Container.astro"
 
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex flex-col gap-1">
-          <h6 class="text-lg font-medium text-gray-700 dark:text-white">Rental Certifier</h6>
+          <h6 class="text-lg font-medium text-gray-700 dark:text-white">🏡 Rental Certifier</h6>
           <span class="text-sm text-gray-500 dark:text-gray-400">Tamper-Proof Rental Applications</span>
         </div>
         <p class="mt-6">
@@ -23,7 +23,7 @@ import Container from "./Container.astro"
 
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex flex-col gap-1">
-          <h6 class="text-lg font-medium text-gray-700 dark:text-white">Loan Certifier</h6>
+          <h6 class="text-lg font-medium text-gray-700 dark:text-white">💰 Loan Certifier</h6>
           <span class="text-sm text-gray-500 dark:text-gray-400">Trusted Docs for Smarter Lending</span>
         </div>
         <p class="mt-6">
@@ -33,7 +33,7 @@ import Container from "./Container.astro"
 
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex flex-col gap-1">
-          <h6 class="text-lg font-medium text-gray-700 dark:text-white">GitHub Proofs</h6>
+          <h6 class="text-lg font-medium text-gray-700 dark:text-white">👨‍💻 GitHub Proofs</h6>
           <span class="text-sm text-gray-500 dark:text-gray-400">Prove What You’ve Built on GitHub</span>
         </div>
         <p class="mt-6">
@@ -43,7 +43,7 @@ import Container from "./Container.astro"
 
       <div class="aspect-auto p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex flex-col gap-1">
-          <h6 class="text-lg font-medium text-gray-700 dark:text-white">Tisura Identity</h6>
+          <h6 class="text-lg font-medium text-gray-700 dark:text-white">🆔 Tisura Identity</h6>
           <span class="text-sm text-gray-500 dark:text-gray-400">Verifiable Identity Proofs, Without The Data Leak</span>
         </div>
         <p class="mt-6">
