--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -20,7 +20,7 @@ import Container from "./Container.astro"
           href="https://tally.so/r/mKZKaV"
           class="relative flex h-12 items-center justify-center px-8 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95"
         >
-          <span class="relative text-base font-semibold text-white dark:text-white">Get Started</span>
+          <span class="relative text-base font-semibold text-white dark:text-white">Request a Demo</span>
         </a>
       </div>
     </div>
