--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -28,10 +28,10 @@ import Container from "./Container.astro"
                         Request a Demo
                     </a>
                     <a
-                        href="/#use-cases"
+                        href="/#solutions"
                         class="text-primary dark:text-light-muted hover:text-white font-medium text-base"
                     >
-                        See Use Cases
+                        See Solutions
                     </a>
                 </div>
 
