--- a/src/components/Solutions.astro
+++ b/src/components/Solutions.astro
@@ -2,7 +2,7 @@
 import Container from "./Container.astro"
 ---
 
-<div class="text-gray-600 dark:text-gray-300" id="use-cases">
+<div class="text-gray-600 dark:text-gray-300" id="solutions">
   <Container>
     <div class="mb-20 space-y-4 px-6 md:px-0">
       <h2 class="text-center text-2xl font-bold text-gray-800 dark:text-white md:text-4xl">
