--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -2,9 +2,10 @@
 import Container from "./Container.astro";
 const links = [
   { to: "/#solutions", label: "Solutions" },
+  { to: "/#use-cases", label: "Use Cases" },
   { to: "/#features",  label: "Features" },
   { to: "https://tisura-docs.vercel.app/", label: "Documentation" },
-  { to: "https://tally.so/r/wM7kGp", label: "Contact" },
+  // { to: "https://tally.so/r/wM7kGp", label: "Contact" },
 ];
 ---
 
