--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,18 @@
 ---
-// import Stats from '../components/Stats.astro';
 import Features from '../components/Features.astro';
 import HeroSection from '../components/HeroSection.astro';
 import Layout from '../layouts/Layout.astro';
 import Solutions from '../components/Solutions.astro';
+import UseCases from '../components/UseCases.astro';
 import CallToAction from '../components/CallToAction.astro';
-// import Blog from '../components/Blog.astro';
 ---
 
 <Layout title="Welcome to Tisura.">
 	<main class="space-y-40 mb-20">
 		<HeroSection/>
 		<Solutions/>
+		<UseCases/>
 		<Features/>
-		<!-- <Stats/> -->
 		<CallToAction/>
-		<!-- <Blog/> -->
 	</main>
 </Layout>
