tiny wording changes

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -123,7 +123,7 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-            ZK KYC
+            Privacy-preserving
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
             Check that customers pass your KYC without asking their data.
