--- a/src/components/UseCases.astro
+++ b/src/components/UseCases.astro
@@ -35,7 +35,7 @@ import Container from "./Container.astro"
 
       <div class="flex flex-col h-full p-8 border border-gray-100 rounded-3xl bg-white dark:bg-gray-800 dark:border-gray-700 shadow-2xl shadow-gray-600/10 dark:shadow-none">
         <div class="flex flex-col gap-1">
-          <h6 class="text-lg font-medium text-gray-700 dark:text-white">🪂 Trustless Airdrop Launchpad</h6>
+          <h6 class="text-lg font-medium text-gray-700 dark:text-white">🪂 Trustless Airdrop</h6>
           <span class="text-sm text-gray-500 dark:text-gray-400">Provable, Zero-Trust Token Distribution</span>
         </div>
         <p class="mt-6">
